--- a/templates/article_details.html
+++ b/templates/article_details.html
@@ -18,65 +18,14 @@
 
     {% load static %}
 
+    <!-- Standard styles between all webpages -->
+    <link rel="stylesheet" href="{% static 'styles.css' %}">
+
     <style>
-        .blurb {
-            text-align: center;
-            color: whitesmoke;
-            font-family: 'Nunito', sans-serif;
-        }
-        body {
-            background-color: rgb(59, 59, 65);
-        }
-        .container{
-            display: flex;
-            align-items: center;
-            justify-content: center;
-        }
-        .header_main {
-            text-align: center;
-            font-family: 'Nunito', sans-serif;
-            font-weight: normal;
-            color: whitesmoke;
-        }
-        .headshot {
-            width: 250px;
-            border-radius: 125px; 
-            display: block;
-            margin-left: auto;
-            margin-right: auto;
-        }
-        .headshot_section {
-            background-color: rgba(194, 108, 130, 0.1);
-        }
-        hr {
-            background-color: whitesmoke;
-            opacity: 0.7;
-        }
-        .links{
-            text-align: center;
-            font-family: 'Nunito', sans-serif;
-            color: whitesmoke;
-            opacity: 1;
-        }
-        .navbar.navbar-expand-sm.bg-transparent.navbar-dark.justify-content-center{
-            /* font-size: smaller; */
-            font-family: 'Nunito', sans-serif;
-        }
-        .post {
-          text-align: left;
-          margin-left: 10px;
-          font-family: 'Nunito', sans-serif;
-          color: whitesmoke;
-        }
-        .thumb {
-            width: 35px; 
-            float: left;
-            margin-left: 10px;
-            align-items: center;
-        }  
+        
     </style>
     
-    <title>Home - Curtis Smith, P.G.</title>
+    <title>Blog Post - Curtis Smith, P.G.</title>
 
 </head>
 
@@ -84,65 +33,63 @@
 
     <br>
 
-    <h1 class="header_main">
-        CURTIS SMITH, P.G.
+    <h1 class="cs_header">
+        CURTIS S. SMITH, P.G.
     </h1>
+    
+    <nav class="navbar navbar-expand-sm bg-transparent navbar-dark justify-content-center" id="just_font">
+        <ul class="navbar-nav">
+            <li class="nav-item">
+                <a class="nav-link" href="/home">home</a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link" href="/projects">projects</a>
+            </li>
+            <li class="nav-item active">
+                <a class="nav-link" href="/blog">the blog</a>
+            </li>
+        </ul>
+    </nav>
 
-    <div>
-        <nav class="navbar navbar-expand-sm bg-transparent navbar-dark justify-content-center">
-            <ul class="navbar-nav">
-                <li class="nav-item">
-                    <a class="nav-link" href="/home">Home</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="/about">About</a>
-                </li>
-                <li class="nav-item active">
-                    <a class="nav-link" href="/blog">Blog</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="/projects">Projects</a>
-            </ul>
-        </nav>
+    <div class="container">
+        <hr class="footer_hr">
     </div>
 
-  <br>
+    <div class="container">
+        <h2 class= "left_text">{{ post.title }} </h2>
+        <p class = "left_text">By: {{ post.author.first_name }}
+            {{ post.author.last_name }}
+            <br>
+            {{ post.date }} CST
+        </p>
+    </div>
 
-  <h2 class= "post">{{ post.title }} </h2>
-  <p class = "post">By: {{ post.author.first_name }}
-      {{ post.author.last_name }}
-      <br>
-      {{ post.date }} CST
-  </p>
-
-  <hr>
+    <div class="container">
+        <hr class="footer_hr">
+    </div>
   
-  <br>
+    <br>
 
-  <div class = "post">
-  {{ post.body|safe }}
-  </div>
+    <div class="container">
+        <div class = "left_text">
+        {{ post.body|safe }}
+        </div>
+    </div>
 
-  <br>
+    <br>
 
-  <hr>
+    <div class="container">
+        <hr class="footer_hr">
 
-  <p class="blurb">Other places you can find me:</p>
-
-  <div class='container'>
-    <a href="https://www.linkedin.com/in/curtis-smith-p-g-3676b785">
-        <img class="thumb" alt="linkedin" src="{% static 'images/LI-In-Bug.png' %}"
-        title="linkedin">
-    </a>
-    <a href="https://github.com/curtissmith291">
-        <img class="thumb" alt="github" src="{% static 'images/gh.png' %}"
-        title="github">
-    </a>
-  </div>
-
-  <br>
-
-  <p class="blurb">curtis.smith.geo@gmail.com</p>
+        <div class="centered_text">
+            <p> 
+            <a href="https://www.linkedin.com/in/curtis-smith-p-g-3676b785">linkedIn</a>
+                ||    
+            <a href="https://github.com/curtissmith291">GitHub</a>
+            </p>
+            <p>curtis.smith.geo@gmail.com</p>
+        </div>
+    </div>
 
 </body>
 </html>
