--- a/templates/blog.html
+++ b/templates/blog.html
@@ -22,7 +22,6 @@
     <link rel="stylesheet" href="{% static 'styles.css' %}">
 
     <!-- Styles Unique to this webpage -->
-
     <style>
 
         .links{
@@ -34,7 +33,7 @@
 
     </style>
     
-    <title>Blog - Curtis Smith, P.G.</title>
+    <title>The Blog - Curtis Smith, P.G.</title>
 
 </head>
 
@@ -43,65 +42,73 @@
     <br>
 
     <h1 class="cs_header">
-        CURTIS SMITH, P.G.
+        CURTIS S. SMITH, P.G.
     </h1>
+    
+    <nav class="navbar navbar-expand-sm bg-transparent navbar-dark justify-content-center" id="just_font">
+        <ul class="navbar-nav">
+            <li class="nav-item">
+                <a class="nav-link" href="/home">home</a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link" href="/projects">projects</a>
+            </li>
+            <li class="nav-item active">
+                <a class="nav-link" href="/blog">the blog</a>
+            </li>
+        </ul>
+    </nav>
 
-    <div class="just_font">
-        <nav class="navbar navbar-expand-sm bg-transparent navbar-dark justify-content-center">
-            <ul class="navbar-nav">
-                <li class="nav-item">
-                    <a class="nav-link" href="/home">Home</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="/about">About</a>
-                </li>
-                <li class="nav-item active">
-                    <a class="nav-link" href="/blog">Blog</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="/projects">Projects</a>
-            </ul>
-        </nav>
+    <div class="container">
+        <hr class="footer_hr">
+    </div>
+
+
+    <div class="container" id="backgroudn">
+        <p class="centered_text">
+        The Blog. I've written some things. 
+        <br>
+        <br>
+        During my time learning programming, data science, and visualization, along with putting together this website, 
+        I've had a few thoughts and insights - not all of them are unique, but they are uniquely mine. 
+        </p>
+    </div>
+
+    <div class="container">
+        <hr class="footer_hr">
     </div>
 
     <br>
 
-    <h3 class = "left_text">
-        Blog Posts
-    </h3>
-
-    <ul style="list-style: none;">
-    {% for post in object_list %}
-        <li class = "links"><a href="{% url 'article-detail' post.pk %}">{{ post.title }} </a>-
-            <small class = "left_text">
-                {{ post.date }}
-            </small>
-        </li>
-    {% endfor %}
-    </ul>
-
-	<hr class="footer_hr">
-
-	<p class="centered_text">Other places you can find me:</p>
-
-    <div class='centered_items'>
-        <a href="https://www.linkedin.com/in/curtis-smith-p-g-3676b785">
-            <img class="thumb" 
-                alt="linkedin" 
-                src="{% static 'images/LI-In-Bug.png' %}"
-                title="linkedin">
-        </a>
-        <a href="https://github.com/curtissmith291">
-            <img class="thumb" 
-                alt="github" 
-                src="{% static 'images/gh.png' %}"
-                title="github">
-        </a>
+    <div class="container">
+        <h3 class = "left_text">
+            Blog Posts
+        </h3>
+        <ul style="list-style: none;">
+        {% for post in object_list %}
+            <li class = "links"><a href="{% url 'article-detail' post.pk %}">{{ post.title }} </a>-
+                <small class = "left_text">
+                    {{ post.date }}
+                </small>
+            </li>
+        {% endfor %}
+        </ul>
     </div>
 
-	<br>
+    <br>
 
-	<p class="centered_text">email me at:<br>curtis.smith.geo@gmail.com</p>
+    <div class="container">
+        <hr class="footer_hr">
+
+        <div class="centered_text">
+            <p> 
+            <a href="https://www.linkedin.com/in/curtis-smith-p-g-3676b785">linkedIn</a>
+                ||    
+            <a href="https://github.com/curtissmith291">GitHub</a>
+            </p>
+            <p>curtis.smith.geo@gmail.com</p>
+        </div>
+    </div>
 
 </body>
 </html>
