--- a/templates/chords.html
+++ b/templates/chords.html
@@ -1,4 +1,7 @@
-<head></head>
+<!DOCTYPE html>
+<html lang="en-US">
+
+<head>
 
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, initial-scale=1.0">
@@ -14,127 +17,51 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Nunito+Sans:wght@200&family=Nunito:wght@200;400&display=swap" rel="stylesheet">
 
+	{% load static %}
+
+	<!-- Standard styles between all webpages -->
+	<link rel="stylesheet" href="{% static 'styles.css' %}">
 
     <style>
-        .navbar.navbar-expand-sm.bg-transparent.navbar-dark.justify-content-center{
-            font-family: 'Nunito', sans-serif;
-        }
-        .blurb {
-          text-align: center;
-          margin-left: 10px;
-          margin-right: 10px;
-          color: whitesmoke;
-          font-family: 'Nunito', sans-serif;
-        } 
-        body {
-            background-color: rgb(59, 59, 65);
-        }
-        .container{
-          display: flex;
-          align-items: center;
-          justify-content: center;
-        }
-        .descritpion_text{
-          font-family: Verdana;
-          color: whitesmoke;
-          opacity: 1;
-          margin-left: 10px;
-        }
-        .fret_input{
-            width:60px
-        }
-        .header_main {
-            text-align: center;
-            font-family: 'Nunito', sans-serif;
-            font-weight: normal;
-            color: whitesmoke;
-        }
-        .thumb {
-            width: 35px; 
-            float: left;
-            margin-left: 10px;
-        }  
-        .test{
-            line-height: 40px;
-        }
-        .links{
-            text-align: center;
-            font-family: 'Nunito', sans-serif;
-            color: whitesmoke;
-            opacity: 0.8;
-        }
-        .link:link{
-          color: lightblue
-        }
-        .link:visited{
-          color: lightblue
-        }
-        .link:hover{
-          text-decoration: underline;
-          
-        }
-        .main_body{
-            text-align: center;
-            font-family: 'Nunito', sans-serif;
-            color: whitesmoke;
-            opacity: 0.8;
-        }
-        .text{
-            text-align: left;
-            margin-right: 10px;
-            font-family: 'Nunito', sans-serif;
-            color: whitesmoke;
-        } 
-        .smalls{
-          font-family: 'Nunito', sans-serif;
-          color: whitesmoke;
-          opacity: 0.8;
-          margin-left: 10px;
-          line-height: 0.5;
-        }
-
-        hr.full_length {
-          border: 0.5px solid whitesmoke;
-          opacity: 0.7;
-        }
-        hr.short_length {
-          border: 0.5px solid whitesmoke;
-          opacity: 0.7;
-          margin-right: 10px;
-        }
+        
     </style>
 
+</head>
 
 <body>
     
     <br>
 
-	<h1 class="header_main">
-			CURTIS SMITH, P.G.
-	</h1>
+    <h1 class="cs_header">
+        CURTIS S. SMITH, P.G.
+    </h1>
+    
+    <nav class="navbar navbar-expand-sm bg-transparent navbar-dark justify-content-center" id="just_font">
+        <ul class="navbar-nav">
+            <li class="nav-item">
+                <a class="nav-link" href="/home">home</a>
+            </li>
+            <li class="nav-item active">
+                <a class="nav-link" href="/projects">projects</a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link" href="/blog">the blog</a>
+            </li>
+        </ul>
+    </nav>
 
-	<nav class="navbar navbar-expand-sm bg-transparent navbar-dark justify-content-center">
-		<ul class="navbar-nav">
-			<li class="nav-item">
-				<a class="nav-link" href="/home">Home</a>
-			</li>
-			<li class="nav-item">
-				<a class="nav-link" href="/about">About</a>
-			</li>
-			<li class="nav-item">
-				<a class="nav-link" href="/blog">Blog</a>
-			</li>
-			<li class="nav-item active">
-				<a class="nav-link" href="/projects">Projects</a>
-			</li>
-		</ul>
-	</nav>
+    <div class="container">
+        <hr class="footer_hr">
+    </div>
 
-    <div class="descritpion_text">
-        <label class="descritpion_text" for="bleh">
-            Input the fret numbers for each string. If the frets are muted or not played, leave the input field blank. 
+    <div class="container">
+        <label class="left_text" for="just_font">
+            Enter the fret number for each guitar string; for unplated strings, leave the input field blank. 
+			The output will be the corresponding chord (if any) for the input frets.
+			<br>
+			For example: inputting E:3, A:2, D:0, G:0, B:0, e:3; the output will be "G Major".
         </label>
-        <form  action="chords_results" id="bleh">
+        <form  action="chords_results" id="just_font">
             <label class="text" for="E"> E : </label>
             <input class="fret_input" type="number" id="E" name = "E" min="0" step="1"><br>
 
@@ -157,13 +84,66 @@
         </form>
     </div>
 
-    <br>
+	<div class="container">
+        <hr class="footer_hr">
+    </div>
+	
+	<div class="container">
+		<h3 class='left_text'>
+			Project Description
+		</h3>
+		<p class='left_text'>
+			"Find a project that aligns with your interests."
+			<br>
+			<br>
+			This is a common piece of advice given to any new programmers; it can be difficult for concepts to truly sink in
+			when just doing homework or working on datasets that spark no personal creativity. 
+			<br>
+			<br>
+			Enter this project.
+			<br>
+			<br>
+			I've played guitar for about 5 years, but recently started getting into music theory; while reading The Idiot's Guide
+			to Guitar Theory, I began to realize that notes, scales, and chords are all just math (well, like 95% anyways... There 
+			always seems to be room for some creative dissonant sounds). I figured creating a program to that would tell me what 
+			chord I was playing would help tremendously when learning all of the patterns necessary to build up the foundation 
+			for understanding music theory. 
+			<br>
+			<br>
+			How this project works: the user input fret numbers get converted into notes by looking up their value in a dictionary. 
+			As there are only 12 notes in the chromatic scale, the dictionary only needs to be 12 items long; however, as there are
+			more than 12 frets for any given string, "12" is subtracted until the input notes are between null and 12 (null for a 
+			muted string) - so this code could work for a guitar with any length of neck. 
+			<br>
+			<br>
+			The converted notes are then run through some funtions to calculate the respective chords for the input root note (the 
+			note played on the lowest string). For example: if the input root note is "G", the program calculates the degrees of the
+			G Major scale (e.g., the root, minor third, perfect fifth, major seventh, etc.). Using those calculated degrees, a large
+			number of chords can be constructed. The G Minor chord is comprised of the root, minor third, and perfect fifth degrees. 
+			As all the degrees are calculated, the degrees are run through functions that return the correct degree.
+			<br>
+			<br>
+			This resuts in an output displaying the chord entered (if any; there are definitely combinations of frets that do not
+			correspond to any chord structure). Additinionally, the chord structures for the entered root note are returned. 
+			<br>
+			<br>
+			Lastly, this is a stepping stone for the more useful, and ambitious, project that will sort of do the reverse of this 
+			project: inputting the key you want to play in and outputting the chords (and fret positions) for the input key. 
+		</p>
+	</div>
 
-    <h3 class='descritpion_text'>
-        Project Description
-    </h3>
-    <p class='descritpion_text'>
-        This project...
-    </p>
+	<div class="container">
+        <hr class="footer_hr">
+
+        <div class="centered_text">
+            <p> 
+            <a href="https://www.linkedin.com/in/curtis-smith-p-g-3676b785">linkedIn</a>
+                ||    
+            <a href="https://github.com/curtissmith291">GitHub</a>
+            </p>
+            <p>curtis.smith.geo@gmail.com</p>
+        </div>
+    </div>
 
 </body>
+</html>
