--- a/templates/chords_results.html
+++ b/templates/chords_results.html
@@ -33,66 +33,128 @@
 
     <br>
 
-	<h1 class="cs_header">
-		CURTIS SMITH, P.G.
-	</h1>
+    <h1 class="cs_header">
+        CURTIS S. SMITH, P.G.
+    </h1>
+    
+    <nav class="navbar navbar-expand-sm bg-transparent navbar-dark justify-content-center" id="just_font">
+        <ul class="navbar-nav">
+            <li class="nav-item">
+                <a class="nav-link" href="/home">home</a>
+            </li>
+            <li class="nav-item active">
+                <a class="nav-link" href="/projects">projects</a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link" href="/blog">the blog</a>
+            </li>
+        </ul>
+    </nav>
 
-	<div class="just_font">
-		<nav class="navbar navbar-expand-sm bg-transparent navbar-dark justify-content-center">
-			<ul class="navbar-nav">
-				<li class="nav-item">
-					<a class="nav-link" href="/home">Home</a>
-				</li>
-				<li class="nav-item">
-					<a class="nav-link" href="/about">About</a>
-				</li>
-				<li class="nav-item">
-					<a class="nav-link" href="/blog">Blog</a>
-				</li>
-				<li class="nav-item active">
-					<a class="nav-link" href="/projects">Projects</a>
-			</ul>
-		</nav>
-	</div>
+    <div class="container">
+        <hr class="footer_hr">
+    </div>
 
 	<br>
 
-
-    <div class="left_text">
-        <p>
-            Your Chord: {{result}}
-        </p>
-        <p>
-            Your Input Notes for Each String: 
-            <!-- iterating through list to get rid of quotes -->
-            {% for note in input_notes %}
-                {{note}},
-            {% endfor %}
-        </p>
-        <p>
-            Your Root Note: {{root_note}}
-        </p>
-        <p>
-            Chord Structures for Your Root Note:
-            <ul style="list-style: none;">
-                {% for dict in list_of_dictionaries %}
-                    <li class="text">{{root_note}} {{dict.chord_type}} Chord -- 
-                    <!-- iterating through list to get rid of quotes -->
-                    <!-- i.e. "C, F, G" instead of "['C', 'E', 'G']" -->
-                    {% for item in dict.notes %}
-                        {{item}},
-                    {% endfor %}
-                    </li>
+    <div class="container">
+        <div class="left_text">
+            <p>
+                Your Chord: {{result}}
+            </p>
+            <p>
+                Your Input Notes for Each String: 
+                <!-- iterating through list to get rid of quotes -->
+                {% for note in input_notes %}
+                    {{note}},
                 {% endfor %}
-        
-            </ul>
-        </p>
+            </p>
+            <p>
+                Your Root Note: {{root_note}}
+            </p>
+            <p>
+                Chord Structures for Your Root Note:
+                <ul style="list-style: none;">
+                    {% for dict in list_of_dictionaries %}
+                        <li class="text">{{root_note}} {{dict.chord_type}} Chord -- 
+                        <!-- iterating through list to get rid of quotes -->
+                        <!-- i.e. "C, F, G" instead of "['C', 'E', 'G']" -->
+                        {% for item in dict.notes %}
+                            {{item}},
+                        {% endfor %}
+                        </li>
+                    {% endfor %}
+            
+                </ul>
+            </p>
+        </div>
+        <a href="/chords">
+            <button>
+                Back to Input
+            </button>
+        </a>
     </div>
-    <a href="/chords">
-        <button>
-            Back to Input
-        </button>
-    </a>
+
+    <div class="container">
+        <hr class="footer_hr">
+    </div>
+
+    <div class="container">
+		<h3 class='left_text'>
+			Project Description
+		</h3>
+		<p class='left_text'>
+			"Find a project that aligns with your interests."
+			<br>
+            <br>
+			This is a common piece of advice given to any new programmers; it can be difficult for concepts to truly sink in
+			when just doing homework or working on datasets that spark no personal creativity. 
+			<br>
+			<br>
+			Enter this project.
+			<br>
+			<br>
+			I've played guitar for about 5 years, but recently started getting into music theory; while reading The Idiot's Guide
+			to Guitar Theory, I began to realize that notes, scales, and chords are all just math (well, like 95% anyways... There 
+			always seems to be room for some creative dissonant sounds). I figured creating a program to that would tell me what 
+			chord I was playing would help tremendously when learning all of the patterns necessary to build up the foundation 
+			for understanding music theory. 
+			<br>
+			<br>
+			How this project works: the user input fret numbers get converted into notes by looking up their value in a dictionary. 
+			As there are only 12 notes in the chromatic scale, the dictionary only needs to be 12 items long; however, as there are
+			more than 12 frets for any given string, "12" is subtracted until the input notes are between null and 12 (null for a 
+			muted string) - so this code could work for a guitar with any length of neck. 
+			<br>
+			<br>
+			The converted notes are then run through some funtions to calculate the respective chords for the input root note (the 
+			note played on the lowest string). For example: if the input root note is "G", the program calculates the degrees of the
+			G Major scale (e.g., the root, minor third, perfect fifth, major seventh, etc.). Using those calculated degrees, a large
+			number of chords can be constructed. The G Minor chord is comprised of the root, minor third, and perfect fifth degrees. 
+			As all the degrees are calculated, the degrees are run through functions that return the correct degree.
+			<br>
+			<br>
+			This resuts in an output displaying the chord entered (if any; there are definitely combinations of frets that do not
+			correspond to any chord structure). Additinionally, the chord structures for the entered root note are returned. 
+            <br>
+			<br>
+			Lastly, this is a stepping stone for the more useful, and ambitious, project that will sort of do the reverse of this 
+			project: inputting the key you want to play in and outputting the chords (and fret positions) for the input key. 
+		</p>
+	</div>
+
+	<div class="container">
+        <hr class="footer_hr">
+
+        <div class="centered_text">
+            <p> 
+            <a href="https://www.linkedin.com/in/curtis-smith-p-g-3676b785">linkedIn</a>
+                ||    
+            <a href="https://github.com/curtissmith291">GitHub</a>
+            </p>
+            <p>curtis.smith.geo@gmail.com</p>
+        </div>
+    </div>
 
 </body>
 </html>
