--- a/templates/home.html
+++ b/templates/home.html
@@ -33,12 +33,19 @@
             margin-left: auto;
             margin-right: auto;
         }
-        .headshot_section {
-            background-color: rgba(194, 108, 130, 0.1);
-        }
+
         #test {
+            margin-left: auto;
+            margin-right: auto;
         }
 
+        .test {
+            margin-left: auto;
+            margin-right: auto;
+        }
+
+        
+        
     </style>
     
     <title>Home - Curtis Smith, P.G.</title>
@@ -50,52 +57,34 @@
     <br>
 
     <h1 class="cs_header">
-        CURTIS SMITH, P.G.
+        CURTIS S. SMITH, P.G.
     </h1>
-
-    <!-- <div class="container">
-        <hr class="footer_hr">
-    </div> -->
-
-    <div class="just_font">
-        <nav class="navbar navbar-expand-sm bg-transparent navbar-dark justify-content-center">
-            <ul class="navbar-nav">
-                <li class="nav-item active">
-                    <a class="nav-link" href="/home">home</a>
-                </li>
-                <!-- <li class="nav-item">
-                    <a class="nav-link" href="/about">about</a> -->
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="/projects">projects</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="/blog">the blog</a>
-                </li>
-            </ul>
-        </nav>
-    </div>
-
-
-
-
-    <div class="headshot_section">
-        <br>
-        <img class="headshot" 
-        src="{% static 'images/sandia.jpg' %}" 
-        alt="Uh oh, a picture is supposed to be here. The issue is probably on your end..." 
-        title="Sandia Mountains, New Mexico">
-        <br>
-    </div>
+    
+    <nav class="navbar navbar-expand-sm bg-transparent navbar-dark justify-content-center" id="just_font">
+        <ul class="navbar-nav">
+            <li class="nav-item active">
+                <a class="nav-link" href="/home">home</a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link" href="/projects">projects</a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link" href="/blog">the blog</a>
+            </li>
+        </ul>
+    </nav>
 
     <div class="container">
         <hr class="footer_hr">
     </div>
 
-    <div class="container">
+    <div class="container" id="backgroudn">
         <p class="centered_text">
-        Hi, welcome to my website. Take a look at my personal programming and data-analysis projects, read about my background, or sift through my 
-        blog where I muse about creating this website from scratch using Django and my experiences in a data analytics 
+        Hi, welcome to my website. 
+        <br>
+        <br>
+        Take a look at my programming and data-analysis projects, read about my background below, or sift through my 
+        blog where I muse about creating this website from scratch using Django along with my experiences in a data analytics 
         bootcamp.
         </p>
     </div>
@@ -106,33 +95,74 @@
 
     <br>
 
-    <div class="container" id="test">
-        <div class="row">
+    <div class="container">
+        <div class="row" id="text">
             <div class="col">
                 <h5 class="just_font">
                     About Me
                 </h5>
                 <p class="just_font">
-                    I'm Professional Geologist 
+                    I'm a Professional Geologist currently working my way though the data analytics
+                    bootcamp through the University of Texas. Prior to starting the bootcamp, I 
+                    worked in environmental consulting as a geologist, primarily on characterization and 
+                    remediation of EPA Superfund Sites. 
+                    <br>
+                    <br>
+                    My previous roles were heavy on report writing, field sampling, logistical preperation
+                    for field events, and sub-contractor oversight. However, numbers and analysis of data has 
+                    always peaked my interest so I enrolled in a data analytics camp to pivot my career into 
+                    a more data-centric role. 
                 </p>
             </div>
             <div class="col">
-
+                <img class="headshot" 
+                src="{% static 'images/sandia.jpg' %}" 
+                alt="Uh oh, a picture is supposed to be here. The issue is probably on your end..." 
+                title="Sandia Mountains, New Mexico">
+                </img>
+                <p class="centered_text" for="headshot">Hiking in the Sandia Mountains, New Mexico</p>
             </div>
         </div>
     </div>
 
-    <hr class="footer_hr">
 
+    <br>
+    <br>
 
-    <div class="centered_text">
-        <p> 
-        <a href="https://www.linkedin.com/in/curtis-smith-p-g-3676b785">linkedIn</a>
-            ||    
-        <a href="https://github.com/curtissmith291">GitHub</a>
-        </p>
-        <p>curtis.smith.geo@gmail.com</p>
+    <div class="container">
+        <div class="row" id="text">
+            <div class="col">
+                <h5 class="just_font">
+                    Skills
+                </h5>
+
+            </div>
+            <div class="col">
+                <h5 class="just_font">
+                    Education
+                </h5>
+                <p class="just_font">
+                    University of Texas - Data Analytics Certificate, October 2021 <br>
+                    University of Oklahoma - Master of Science in Geology, 2016 <br>
+                    Texas A&M University - Bachelor of Science in Geology, 2014
+                    
+                </p>
+            </div>
+        </div>
     </div>
 
+    <div class="container">
+        <hr class="footer_hr">
+
+        <div class="centered_text">
+            <p> 
+            <a href="https://www.linkedin.com/in/curtis-smith-p-g-3676b785">linkedIn</a>
+                ||    
+            <a href="https://github.com/curtissmith291">GitHub</a>
+            </p>
+            <p>curtis.smith.geo@gmail.com</p>
+        </div>
+    </div>
+    
 </body>
 </html>
