--- a/templates/projects.html
+++ b/templates/projects.html
@@ -64,95 +64,66 @@
 
 <body>
 
-  	<br>
+    <br>
 
-	<h1 class="cs_header">
-			CURTIS SMITH, P.G.
-	</h1>
+    <h1 class="cs_header">
+        CURTIS S. SMITH, P.G.
+    </h1>
+    
+    <nav class="navbar navbar-expand-sm bg-transparent navbar-dark justify-content-center" id="just_font">
+        <ul class="navbar-nav">
+            <li class="nav-item">
+                <a class="nav-link" href="/home">home</a>
+            </li>
+            <li class="nav-item active">
+                <a class="nav-link" href="/projects">projects</a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link" href="/blog">the blog</a>
+            </li>
+        </ul>
+    </nav>
 
-  	<div class="just_font">
-		<nav class="navbar navbar-expand-sm bg-transparent navbar-dark justify-content-center">
-			<ul class="navbar-nav">
-				<li class="nav-item">
-					<a class="nav-link" href="/home">Home</a>
-				</li>
-				<li class="nav-item">
-					<a class="nav-link" href="/about">About</a>
-				</li>
-				<li class="nav-item">
-					<a class="nav-link" href="/blog">Blog</a>
-				</li>
-				<li class="nav-item active">
-					<a class="nav-link" href="/projects">Projects</a>
-				</li>
-			</ul>
-		</nav>
+    <div class="container">
+        <hr class="footer_hr">
+    </div>
+
+
+	<div class="container">
+		<p class = "centered_text">
+			Projects. There are many, but these are mine. 
+			<br>
+			<br>
+			The projects are listed in reverse-chronological order, and are projects independent of
+			coursework required for the data-analytics bootcamp. My GitHub (link at bottom of the page)
+			contains a more exhaustive list of projects, including coursework. 
+		</p>
 	</div>
+
+	<div class="container">
+        <hr class="footer_hr">
+    </div>
+
 	<br>
 
-	<p class = "centered_text">
-			This page is a list of my projects. Projects are listed in reverse chronological order. 
-			Notes about the projects are included in each link. 
-	</p>
-
-	
-	<!-- <div class="test">
-		<ul style="list-style: none;">
-			<hr class="short_length">
-			<li><a class="link" href="/chords">Guitar Chord Finder</a></li>
-			<p class="project_descriptions">
-				For this project, the user inputs the frets for each string of a guitar, and the chord name, if any, 
-				entered will be returned, along with the chord structures for the root note entered. 
-			</p>
-			<p class="project_descriptions">Tags:
-				<span class="badge badge-pill badge-light">Python</span>
-			</p>
-			<hr class="short_length">
-
-			<li><a class="link" href="/sf_locator">Superfund Site Locator</a></li>
-			<p class="project_descriptions">
-				This project returns a list of EPA Superfind Sites within 50 miles of the 
-				input address.</p>
-			<p class="project_descriptions">Tags:
-				<span class="badge badge-pill badge-light">Python</span>
-				<span class="badge badge-pill badge-light">Pandas</span>
-				<span class="badge badge-pill badge-light">API</span>
-			</p>
-			<hr class="short_length">
-
-			<li><a class="link" href="/add">Adding Numbers</a></li>
-			<p class="project_descriptions">
-				This link is to a webpage that adds two input integers.</p>
-			<hr class="short_length">
-
-			<li><a class="link" href="/square">Number Squared</a></li>
-			<p class="project_descriptions">This link is to a simple webpage that squares an integer the user inputs.</p>
-			<hr class="short_length">
-
-			<li><a class="link" href="/hello">Hello, User</a></li>
-			<p class="project_descriptions"> This link is to a simple webpage that returns your username with a friendly "Hello".</p>
-			
-		</ul>
-	</div> -->
-
-	<div class="test">
+	<div class="container">
 		
-		<hr class="short_length">
+		<!-- <hr class="short_length"> -->
 		<a class="link" href="/chords">Guitar Chord Finder</a>
-		<p class="project_descriptions">
+		<p class="left_text">
 			For this project, the user inputs the frets for each string of a guitar, and the chord name, if any, 
 			entered will be returned, along with the chord structures for the root note entered. 
 		</p>
-		<p class="project_descriptions">Tags:
+		<p class="left_text">Tags:
 			<span class="badge badge-pill badge-light">Python</span>
 		</p>
 		<hr class="short_length">
 
 		<a class="link" href="/sf_locator">Superfund Site Locator</a>
-		<p class="project_descriptions">
+		<p class="left_text">
 			This project returns a list of EPA Superfind Sites within 50 miles of the 
 			input address.</p>
-		<p class="project_descriptions">Tags:
+		<p class="left_text">Tags:
 			<span class="badge badge-pill badge-light">Python</span>
 			<span class="badge badge-pill badge-light">Pandas</span>
 			<span class="badge badge-pill badge-light">API</span>
@@ -160,39 +131,33 @@
 		<hr class="short_length">
 
 		<a class="link" href="/add">Adding Numbers</a>
-		<p class="project_descriptions">
+		<p class="left_text">
 			This link is to a webpage that adds two input integers.</p>
 		<hr class="short_length">
 
 		<a class="link" href="/square">Number Squared</a>
-		<p class="project_descriptions">This link is to a simple webpage that squares an integer the user inputs.</p>
+		<p class="left_text">This link is to a simple webpage that squares an integer the user inputs.</p>
 		<hr class="short_length">
 
 		<a class="link" href="/hello">Hello, User</a>
-		<p class="project_descriptions"> This link is to a simple webpage that returns your username with a friendly "Hello".</p>
+		<p class="left_text"> This link is to a simple webpage that returns your username with a friendly "Hello".</p>
 		
 		
 	</div>
 	<br>
 
-	<hr class="footer_hr">
+    <div class="container">
+        <hr class="footer_hr">
 
-	<p class="centered_text">Other places you can find me:</p>
-
-	<div class='centered_items'>
-		<a href="https://www.linkedin.com/in/curtis-smith-p-g-3676b785">
-			<img class="thumb" alt="linkedin" src="{% static 'images/LI-In-Bug.png' %}"
-			title="linkedin">
-		</a>
-		<a href="https://github.com/curtissmith291">
-			<img class="thumb" alt="github" src="{% static 'images/gh.png' %}"
-			title="github">
-		</a>
-	</div>
-
-	<br>
-
-	<p class="centered_text">email me at:<br>curtis.smith.geo@gmail.com</p>
+        <div class="centered_text">
+            <p> 
+            <a href="https://www.linkedin.com/in/curtis-smith-p-g-3676b785">linkedIn</a>
+                ||    
+            <a href="https://github.com/curtissmith291">GitHub</a>
+            </p>
+            <p>curtis.smith.geo@gmail.com</p>
+        </div>
+    </div>
 
 </body>
 </html>
