--- a/templates/chords.html
+++ b/templates/chords.html
@@ -59,7 +59,7 @@
             Enter the fret number for each guitar string; for unplated strings, leave the input field blank. 
 			The output will be the corresponding chord (if any) for the input frets.
 			<br>
-			For example: inputting E:3, A:2, D:0, G:0, B:0, e:3; the output will be "G Major".
+			For example: input E:3, A:2, D:0, G:0, B:0, e:3; the output will be "G Major".
         </label>
         <form  action="chords_results" id="just_font">
             <label class="text" for="E"> E : </label>
