backlog of updates - completed earthquake analysis

--- a/templates/home.html
+++ b/templates/home.html
@@ -80,12 +80,8 @@
 
     <div class="container" id="backgroudn">
         <p class="centered_text">
-        Hi, welcome to my website. 
-        <br>
-        <br>
-        Take a look at my programming and data-analysis projects, read about my background below, or sift through my 
-        blog where I muse about creating this website from scratch using Django along with my experiences in a data analytics 
-        bootcamp.
+            Hi, welcome to my website. 
+            <br>
         </p>
     </div>
 
@@ -106,13 +102,19 @@
                     bootcamp through the University of Texas. Prior to starting the bootcamp, I 
                     worked in environmental consulting as a geologist, primarily on characterization and 
                     remediation of EPA Superfund Sites. 
-                    <br>
-                    <br>
-                    My previous roles were heavy on report writing, field sampling, logistical preperation
-                    for field events, and sub-contractor oversight. However, numbers and analysis of data has 
-                    always peaked my interest so I enrolled in a data analytics camp to pivot my career into 
-                    a more data-centric role. 
+                    <br><br>
+                    My previous roles were heavy on report writing, field sampling, logistical preparation
+                    for field events, and sub-contractor oversight. However, my background includes quite a 
+                    bit of data analysis: geology is more than just looking at rocks. Quantitative analysis 
+                    of material composition, analyzing temporal and spatial contamination trends, statistical 
+                    analysis of remediation goals and benchmarks, and visualization of all the aformentioned 
+                    data. 
+                    <br><br>
+                    Numbers and analysis of data has always been the more engaging part of my job so I enrolled 
+                    in a data analytics camp to formally learn data analytical techniques and software to compliment 
+                    my analytical background, and ultimately pivot into a more data-centric role. 
                 </p>
+
             </div>
             <div class="col">
                 <img class="headshot" 
@@ -135,6 +137,18 @@
                 <h5 class="just_font">
                     Skills
                 </h5>
+                <ul class="left_text">
+                    <li>Python - Pandas, Plotly, Scikit Learn, TensorFlow</li>
+                    <li>APIs and JSON - Spotify, United States Geological Survey, Environmental Protection Agency, MapBox, OpenWeatherMap</li>
+                    <li>Django</li>
+                    <li>HTML and CSS</li>
+                    <li>SQL - MySQL and PostgreSQL</li>
+                    <li>Tableau</li>
+                    <li>Excel and VBA</li>
+                    <li>Some R and Javascript</li>
+                    <li>Plus, 5 years' experience in environmental consulting, and all of the reporting, Excel, logistics, field work, 
+                        and data collection inherent to the job</li>
+                </ul>
 
             </div>
             <div class="col">
@@ -145,7 +159,20 @@
                     University of Texas - Data Analytics Certificate, October 2021 <br>
                     University of Oklahoma - Master of Science in Geology, 2016 <br>
                     Texas A&M University - Bachelor of Science in Geology, 2014
-                    
+                </p>
+                <h5 class="just_font">
+                    Publications
+                </h5>
+                <p> 
+                    <a href="https://pubs.geoscienceworld.org/gsa/gsabulletin/article-abstract/130/7-8/1256/529107/Scanning-electron-microscope-SEM-microtextural">
+                        Scanning electron microscope (SEM) microtextural analysis as a paleoclimate tool for fluvial deposits: A modern test</a>
+                </p>
+                <h5 class="just_font">
+                    Licenses
+                </h5>
+                <p> 
+                    <a href="https://search.dca.ca.gov/details/7500/GEO/9800/26e92ede2bb9e65bc90a67bec76f4c96">
+                        Profesional Geologist, California No. 9800</a>
                 </p>
             </div>
         </div>
