--- a/templates/projects.html
+++ b/templates/projects.html
@@ -91,8 +91,54 @@
 	<br>
 
 	<div class="container">
+
+        <a class="link" href="">Lyrics 'n Genres: A Machine Learning Analysis</a>
+		<p class="left_text">
+            Coming soon!
+            <br>
+            An analysis of the relationship of lyrics and the genre to which the song belogs.
+		</p>
+		<p class="left_text">Tags:
+			<span class="badge badge-pill badge-light">Python</span>
+            <span class="badge badge-pill badge-light">Pandas</span>
+            <span class="badge badge-pill badge-light">Databases</span>
+            <span class="badge badge-pill badge-light">Analysis</span>
+            <span class="badge badge-pill badge-light">Scikit-Learn</span>
+		</p>
+
+		<hr class="short_length">
 		
-		<!-- <hr class="short_length"> -->
+        <a class="link" href="/oklahoma_eq_analysis">Analysis of Olahoma Earthquakes</a>
+		<p class="left_text">
+            An analysis of the effect of waste water injection on seismicity in Oklahoma.
+		</p>
+		<p class="left_text">Tags:
+			<span class="badge badge-pill badge-light">Python</span>
+            <span class="badge badge-pill badge-light">Pandas</span>
+            <span class="badge badge-pill badge-light">Plotly</span>
+            <span class="badge badge-pill badge-light">Databases</span>
+            <span class="badge badge-pill badge-light">Analysis</span>
+            <span class="badge badge-pill badge-light">Scikit-Learn</span>
+		</p>
+
+		<hr class="short_length">
+
+        <a class="link" href="/oklahoma_earthquakes">Interactive Map of Oklahoma Earthquakes</a>
+		<p class="left_text">
+			Following this link takes you to an interactive map displaying earthquakes in Oklahoma per year, 
+            from 2006 to July 2021. This is part of a larger project analyzing the correlation between wastewater
+            injection and increased seismicity in Oklhaoma.
+		</p>
+		<p class="left_text">Tags:
+			<span class="badge badge-pill badge-light">Python</span>
+            <span class="badge badge-pill badge-light">Pandas</span>
+            <span class="badge badge-pill badge-light">Plotly</span>
+            <span class="badge badge-pill badge-light">Databases</span>
+            <span class="badge badge-pill badge-light">Interactive</span>
+		</p>
+
+		<hr class="short_length">
+
 		<a class="link" href="/keychords">Chords in a Key</a>
 		<p class="left_text">
 			For this project, the user inputs the they desired musical key and a fret range; the diatonic chords for the 
@@ -100,6 +146,7 @@
 		</p>
 		<p class="left_text">Tags:
 			<span class="badge badge-pill badge-light">Python</span>
+            <span class="badge badge-pill badge-light">Interactive</span>
 		</p>
 
 		<hr class="short_length">
@@ -111,6 +158,7 @@
 		</p>
 		<p class="left_text">Tags:
 			<span class="badge badge-pill badge-light">Python</span>
+            <span class="badge badge-pill badge-light">Interactive</span>
 		</p>
 
 		<hr class="short_length">
@@ -123,6 +171,7 @@
 			<span class="badge badge-pill badge-light">Python</span>
 			<span class="badge badge-pill badge-light">Pandas</span>
 			<span class="badge badge-pill badge-light">API</span>
+            <span class="badge badge-pill badge-light">Interactive</span>
 		</p>
 
 		<hr class="short_length">
